@@ -4,6 +4,7 @@
 - github #174 - put back notification about missing pysmbc
 - update .pot file because of fix #174
 - python3.9 - xml module removed elem.getchildren() method, use list(elem)
+- Make the matching rule of printer device path more flexible (#183)
 
 1.5.12 changes
 --------------
